[project]
name = "personal-safe-calendar-synchronizer"
version = "0.1.0"
description = "Basic API that receives Calendar event and synchronizes with a calendar service"
authors = [
    {name = "Rodrigo Machado"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
